plugins {
    id 'org.springframework.boot' version '2.4.1'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group 'org.bahmni_avni_integration'
version '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

dependencies {
    implementation project(':integration-data')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    compile group: 'org.json', name: 'json', version: '20201115'
    compile "log4j:log4j:1.2.16"
    compile "commons-io:commons-io:2.4"
    compile "commons-lang:commons-lang:2.6"

    compile "org.javatuples:javatuples:1.2"

    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
}

task unitTest( type: Test ) {
    useJUnitPlatform()
    include ("**/**Test.class")
    exclude ("**/**ExternalTest.class")
}

test {
    useJUnitPlatform()
}